==> zhiyb/Il-Matto/modules/CC3000/Hardware/spi.c <==
#include "hci.h"
#include "spi.h"
#include "evnt_handler.h"
#include <avr/io.h>
#include <avr/interrupt.h>
#include <util/delay.h>
#include <avr/pgmspace.h>
#include <stdio.h>
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (PORTD &= ~SPI_CS)
#define DEASSERT_CS()        (PORTD |= SPI_CS)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

long SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
	// workaround for first transaction
	ASSERT_CS();

	// ~50 micro delay
	_delay_us(50);

	// SPI writes first 4 bytes of data
	SpiWriteDataSynchronous(ucBuf, 4);

	_delay_us(50);

	SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);

	// From this point on - operate in a regular way
	sSpiInformation.ulSpiState = eSPI_STATE_IDLE;

	DEASSERT_CS();

	return(0);
}

void SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{
	while (size--) {
		while (!(TXBufferIsEmpty()));
		UDR1 = *data++;
		while (!(RXBufferIsEmpty()));
		UDR1;
	}
}

void SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
	long i = 0;
	unsigned char *data_to_send = tSpiReadHeader;

	for (i = 0; i < size; i++) {
		while (!(TXBufferIsEmpty()));
		//Dummy write to trigger the clock
		UDR1 = data_to_send[0];
		while (!(RXBufferIsEmpty()));
		data[i] = UDR1;
	}
}

void SpiResumeSpi(void)
{
	PCMSK3 |= CC3000_INT;
	spiRunning = 1;
	if (interruptRequest)
		isr();
}

long TXBufferIsEmpty(void)
{
	return UCSR1A & _BV(UDRE1);
}

long RXBufferIsEmpty(void)
{
	// It seems return true when data available
	return UCSR1A & _BV(RXC1);
}
